--- a/ramdisk/init.rc
+++ b/ramdisk/init.rc
@@ -22,7 +22,6 @@ loglevel 3
     export ANDROID_DATA /data
     export ASEC_MOUNTPOINT /mnt/asec
     export LOOP_MOUNTPOINT /mnt/obb
-    export SD_EXT_DIRECTORY /sd-ext
     export BOOTCLASSPATH /system/framework/core.jar:/system/framework/core-junit.jar:/system/framework/bouncycastle.jar:/system/framework/ext.jar:/system/framework/framework.jar:/system/framework/android.policy.jar:/system/framework/services.jar:/system/framework/apache-xml.jar:/system/framework/filterfw.jar
 
 # Backward compatibility
@@ -40,7 +39,7 @@ loglevel 3
 
     mkdir /system
     mkdir /data 0771 system system
-    mkdir /cache 0770 system cache
+    mkdir /cache 0771 system cache
     mkdir /config 0500 root root
 
     # Directory for putting things only root should see.
@@ -60,10 +59,6 @@ loglevel 3
     # Filesystem image public mount points.
     mkdir /mnt/obb 0700 root system
     mount tmpfs tmpfs /mnt/obb mode=0755,gid=1000
-
-    # SD-EXT
-    mkdir /sd-ext 0771 system system
-    symlink /sd-ext /mnt/sd-ext
 
     write /proc/sys/kernel/panic_on_oops 1
     write /proc/sys/kernel/hung_task_timeout_secs 0
@@ -210,6 +205,13 @@ on boot
     # Tweak background writeout
     write /proc/sys/vm/dirty_expire_centisecs 1000
     write /proc/sys/vm/dirty_background_ratio  55
+
+    # switch CPUfreq from performance to hotplug
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor hotplug
+    write /sys/devices/system/cpu/cpufreq/hotplug/down_threshold 30
+
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1000000
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 100000
 
     # Permissions for System Server and daemons.
     chown radio system /sys/android_power/state
