update to 6.1.1.B.0.253 (without Wifi)
Signed-off-by: hayashikejinan <hayashikejinan@gmail.com>

--- a/kernel/arch/arm/mach-ux500/Makefile
+++ b/kernel/arch/arm/mach-ux500/Makefile
@@ -5,7 +5,8 @@
 obj-y				:= clock.o cpu.o devices.o dcache.o \
 				   devices-common.o id.o pins.o \
 				   usb.o reboot_reasons.o timer.o \
-				   uart-db8500.o clock-debug.o
+				   uart-db8500.o clock-debug.o \
+				   irq-trigger.o
 obj-y				+= pm/ test/
 
 
