--- a/kernel/arch/arm/configs/riogrande_kumquat_defconfig
+++ b/kernel/arch/arm/configs/riogrande_kumquat_defconfig
@@ -1,6 +1,5 @@
 CONFIG_EXPERIMENTAL=y
 # CONFIG_LOCALVERSION_AUTO is not set
-# CONFIG_SWAP is not set
 CONFIG_SYSVIPC=y
 CONFIG_BSD_PROCESS_ACCT=y
 CONFIG_TASKSTATS=y
@@ -28,7 +27,6 @@ CONFIG_MODULE_UNLOAD=y
 CONFIG_MODVERSIONS=y
 CONFIG_MODULE_SRCVERSION_ALL=y
 # CONFIG_BLK_DEV_BSG is not set
-CONFIG_DEFAULT_DEADLINE=y
 CONFIG_ARCH_U8500=y
 CONFIG_UX500_SOC_DB8500=y
 CONFIG_MACH_U8500_KUMQUAT=y
@@ -42,6 +40,7 @@ CONFIG_UX500_SUSPEND_STANDBY=y
 CONFIG_UX500_SUSPEND_MEM=y
 CONFIG_UX500_SUSPEND_DBG=y
 CONFIG_UX500_SUSPEND_DBG_WAKE_ON_UART=y
+CONFIG_SONY_SSM=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_SMP=y
@@ -351,6 +350,7 @@ CONFIG_ANDROID_LOGGER=y
 CONFIG_ANDROID_RAM_CONSOLE=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
+CONFIG_ZRAM=y
 CONFIG_CG2900=y
 CONFIG_CG2900_CHIP=y
 CONFIG_STLC2690_CHIP=y
