--- a/kernel/arch/arm/configs/riogrande_lotus_defconfig
+++ b/kernel/arch/arm/configs/riogrande_lotus_defconfig
@@ -1,5 +1,6 @@
 CONFIG_EXPERIMENTAL=y
 # CONFIG_LOCALVERSION_AUTO is not set
+CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
 CONFIG_BSD_PROCESS_ACCT=y
 CONFIG_TASKSTATS=y
@@ -352,7 +353,6 @@ CONFIG_ANDROID_LOGGER=y
 CONFIG_ANDROID_RAM_CONSOLE=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
-CONFIG_ZRAM=y
 CONFIG_CG2900=y
 CONFIG_CG2900_CHIP=y
 CONFIG_STLC2690_CHIP=y
@@ -403,3 +403,4 @@ CONFIG_CRYPTO_DEV_UX500=y
 CONFIG_CRYPTO_DEV_UX500_HASH=y
 CONFIG_CRC7=y
 CONFIG_AVERAGE=y
+CONFIG_ZRAM=y
