--- a/ramdisk/init.rc
+++ b/ramdisk/init.rc
@@ -207,11 +207,11 @@ on boot
     write /proc/sys/vm/dirty_background_ratio  55
 
     # switch CPUfreq from performance to hotplug
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor hotplug
-    write /sys/devices/system/cpu/cpufreq/hotplug/down_threshold 30
+#    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor hotplug
+#    write /sys/devices/system/cpu/cpufreq/hotplug/down_threshold 30
 
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1000000
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 100000
+#    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1000000
+#    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 100000
 
     # Permissions for System Server and daemons.
     chown radio system /sys/android_power/state
