- experimental arm bug ... disable - experimental variable voltage test - add script

--- a/kernel-uksm/arch/arm/configs/cyanogen_nypon_defconfig
+++ b/kernel-uksm/arch/arm/configs/cyanogen_nypon_defconfig
@@ -333,7 +333,7 @@ CONFIG_RTC_HCTOHC=y
 # Display setup
 #
 CONFIG_U8500_TV_OUTPUT_AV8100=y
-CONFIG_MCDE_DISPLAY_PRIMARY_TRIPPLE_BUFFERED=y
+# CONFIG_MCDE_DISPLAY_PRIMARY_TRIPPLE_BUFFERED is not set
 CONFIG_DISPLAY_AV8100_TRIPPLE_BUFFER=y
 CONFIG_DBX500_PRCMU_QOS_POWER=y
 CONFIG_DBX500_CONTEXT=y
