--- a/kernel-uksm/drivers/cpufreq/Kconfig
+++ b/kernel-uksm/drivers/cpufreq/Kconfig
@@ -138,6 +138,10 @@ config CPU_FREQ_DEFAULT_GOV_ADAPTIVE
 	  'adaptive' governor for latency-sensitive workloads and demanding
 	  performance.
 
+config CPU_FREQ_DEFAULT_GOV_PEGASUSQ
+        bool "pegasusq"
+        select CPU_FREQ_GOV_PEGASUSQ
+
 endchoice
 
 config CPU_FREQ_GOV_PERFORMANCE
@@ -259,6 +263,9 @@ config CPU_FREQ_GOV_ADAPTIVE
 	  module will be called cpufreq_adaptive.
 
 	  For details, take a look at linux/Documentation/cpu-freq.
+
+config CPU_FREQ_GOV_PEGASUSQ
+        tristate "'pegasusq' cpufreq policy governor"
 
 menu "x86 CPU frequency scaling drivers"
 depends on X86
