--- a/kernel-uksm/drivers/gpu/mali/Makefile
+++ b/kernel-uksm/drivers/gpu/mali/Makefile
@@ -1,3 +1,7 @@
+KBUILD_CFLAGS := ${KBUILD_CFLAGS:%O2=%O3}
+KBUILD_AFLAGS := ${KBUILD_AFLAGS:%O2=%O3}
+
+
 MALI_SUBFOLDER := mali400ko/driver/src/devicedrv/mali
 MALI_FOLDER := $(srctree)/$(src)/$(MALI_SUBFOLDER)
 ifeq ($(shell [ -d $(MALI_FOLDER) ] && echo "OK"), OK)
