--- a/kernel-uksm/ipc/Makefile
+++ b/kernel-uksm/ipc/Makefile
@@ -1,6 +1,8 @@
 #
 # Makefile for the linux ipc.
 #
+KBUILD_CFLAGS := ${KBUILD_CFLAGS:%O2=%O3}
+KBUILD_AFLAGS := ${KBUILD_AFLAGS:%O2=%O3}
 
 
 obj-$(CONFIG_SYSVIPC_COMPAT) += compat.o
