--- a/kernel-uksm/arch/arm/configs/cyanogen_nypon_defconfig
+++ b/kernel-uksm/arch/arm/configs/cyanogen_nypon_defconfig
@@ -184,12 +184,12 @@ CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_VR=y
 CONFIG_IOSCHED_FIOPS=y
-CONFIG_DEFAULT_DEADLINE=y
+# CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_SIO is not set
 # CONFIG_DEFAULT_VR is not set
-# CONFIG_DEFAULT_FIOPS is not set
+CONFIG_DEFAULT_FIOPS=y
 # CONFIG_DEFAULT_NOOP is not set
-CONFIG_DEFAULT_IOSCHED="deadline"
+CONFIG_DEFAULT_IOSCHED="fiops"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
 # CONFIG_INLINE_SPIN_LOCK is not set
@@ -504,13 +504,24 @@ CONFIG_CPU_FREQ_STAT_DETAILS=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_HOTPLUG=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_HOTPLUG is not set
+# CONFIG_CPU_FREQ_DEFAULT_ABYSSPLUG is not set
+# CONFIG_CPU_FREQ_DEFAULT_KTOONSERVATIVE is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ is not set
+# CONFIG_CPU_FREQ_DEFAULT_ADAPTIVE is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+# CONFIG_CPU_FREQ_GOV_ADAPTIVE is not set
+# CONFIG_CPU_FREQ_GOV_ABYSSPLUG is not set
+# CONFIG_CPU_FREQ_GOV_KTOONSERVATIVE is not set
+CONFIG_CONFIG_CPU_FREQ_GOV_LULZACTIVE=y
+CONFIG_CPU_FREQ_GOV_WHEATLEY=y
+CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
 CONFIG_CPU_FREQ_GOV_HOTPLUG=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_GOV_LADDER=y
