--- a/kernel-uksm/drivers/cpufreq/Kconfig
+++ b/kernel-uksm/drivers/cpufreq/Kconfig
@@ -122,6 +122,28 @@ config CPU_FREQ_DEFAULT_GOV_HOTPLUG
 	  the help section of the driver. Fallback governor will be the
 	  performance governor.
 
+config CPU_FREQ_DEFAULT_ABYSSPLUG
+	bool "abyssplug"
+	select CPU_FREQ_GOV_ABYSSPLUG
+
+config CPU_FREQ_DEFAULT_KTOONSERVATIVE
+        bool "ktoonservative"
+        select CPU_FREQ_GOV_KTOONSERVATIVE
+
+config CPU_FREQ_DEFAULT_GOV_WHEATLEY
+        bool "wheatley"
+        select CPU_FREQ_GOV_WHEATLEY
+
+config CPU_FREQ_DEFAULT_GOV_PEGASUSQ
+        bool "pegasusq"
+        select CPU_FREQ_GOV_PEGASUSQ
+        select CPU_FREQ_GOV_HOTPLUG
+        select CPU_FREQ_GOV_PERFORMANCE
+
+config CPU_FREQ_DEFAULT_ADAPTIVE
+        bool "adaptive"
+	select CPU_FREQ_GOV_ADAPTIVE
+
 endchoice
 
 config CPU_FREQ_GOV_PERFORMANCE
@@ -218,6 +240,30 @@ config CPU_FREQ_GOV_CONSERVATIVE
 	  For details, take a look at linux/Documentation/cpu-freq.
 
 	  If in doubt, say N.
+
+config CPU_FREQ_GOV_ADAPTIVE
+        tristate "'adaptive' cpufreq governor"
+        depends on CPU_FREQ
+
+config CPU_FREQ_GOV_ABYSSPLUG
+        tristate "'abyssplug' cpufreq governor"
+        depends on CPU_FREQ
+
+config CPU_FREQ_GOV_KTOONSERVATIVE
+        tristate "'ktoonservative' cpufreq governor"
+        depends on CPU_FREQ
+
+config CONFIG_CPU_FREQ_GOV_LULZACTIVE
+        tristate "'lulzactiveq' cpufreq governor"
+        depends on CPU_FREQ
+
+config CPU_FREQ_GOV_WHEATLEY
+        tristate "'wheatley' cpufreq governor"
+        depends on CPU_FREQ
+
+config CPU_FREQ_GOV_PEGASUSQ
+        tristate "'pegasusq' cpufreq governor"
+        depends on CPU_FREQ && CPU_FREQ_GOV_HOTPLUG && CPU_FREQ_GOV_PERFORMANCE
 
 menu "x86 CPU frequency scaling drivers"
 depends on X86
