--- a/kernel-uksm/drivers/cpufreq/Makefile
+++ b/kernel-uksm/drivers/cpufreq/Makefile
@@ -15,6 +15,12 @@ obj-$(CONFIG_CPU_FREQ_GOV_ONDEMAND)	+= cpufreq_ondemand.o
 obj-$(CONFIG_CPU_FREQ_GOV_CONSERVATIVE)	+= cpufreq_conservative.o
 obj-$(CONFIG_CPU_FREQ_GOV_INTERACTIVE)	+= cpufreq_interactive.o
 obj-$(CONFIG_CPU_FREQ_GOV_HOTPLUG)	+= cpufreq_hotplug.o
+obj-$(CONFIG_CPU_FREQ_GOV_ADAPTIVE)      += cpufreq_adaptive.o
+obj-$(CONFIG_CPU_FREQ_GOV_ABYSSPLUG)      += cpufreq_abyssplug.o
+obj-$(CONFIG_CPU_FREQ_GOV_KTOONSERVATIVE)      += cpufreq_ktoonservative.o
+obj-$(CONFIG_CPU_FREQ_GOV_LULZACTIVEQ)      += cpufreq_lulzactiveq.o
+obj-$(CONFIG_CPU_FREQ_GOV_WHEATLEY)      += cpufreq_wheatley.o
+obj-$(CONFIG_CPU_FREQ_GOV_PEGASUSQ)      += cpufreq_pegasusq.o
 
 # CPUfreq cross-arch helpers
 obj-$(CONFIG_CPU_FREQ_TABLE)		+= freq_table.o
