--- a/kernel-uksm/drivers/cpufreq/Kconfig
+++ b/kernel-uksm/drivers/cpufreq/Kconfig
@@ -253,7 +253,7 @@ config CPU_FREQ_GOV_KTOONSERVATIVE
         tristate "'ktoonservative' cpufreq governor"
         depends on CPU_FREQ
 
-config CONFIG_CPU_FREQ_GOV_LULZACTIVE
+config CPU_FREQ_GOV_LULZACTIVE
         tristate "'lulzactiveq' cpufreq governor"
         depends on CPU_FREQ
 
