--- a/kernel-uksm/drivers/cpufreq/Makefile
+++ b/kernel-uksm/drivers/cpufreq/Makefile
@@ -1,5 +1,5 @@
-KBUILD_CFLAGS := ${KBUILD_CFLAGS:%O2=%O3}
-KBUILD_AFLAGS := ${KBUILD_AFLAGS:%O2=%O3}
+#KBUILD_CFLAGS := ${KBUILD_CFLAGS:%O2=%O3}
+#KBUILD_AFLAGS := ${KBUILD_AFLAGS:%O2=%O3}
 
 
 # CPUfreq core
