--- a/kernel-uksm/drivers/cpuidle/Makefile
+++ b/kernel-uksm/drivers/cpuidle/Makefile
@@ -3,8 +3,8 @@
 # Makefile for cpuidle.
 #
 
-KBUILD_CFLAGS := ${KBUILD_CFLAGS:%O2=%O3}
-KBUILD_AFLAGS := ${KBUILD_AFLAGS:%O2=%O3}
+#KBUILD_CFLAGS := ${KBUILD_CFLAGS:%O2=%O3}
+#KBUILD_AFLAGS := ${KBUILD_AFLAGS:%O2=%O3}
 
 
 obj-y += cpuidle.o driver.o governor.o sysfs.o governors/
