--- a/kernel-uksm/lib/Makefile
+++ b/kernel-uksm/lib/Makefile
@@ -2,8 +2,8 @@
 # Makefile for some libs needed in the kernel.
 #
 
-KBUILD_CFLAGS := ${KBUILD_CFLAGS:%O2=%O3}
-KBUILD_AFLAGS := ${KBUILD_AFLAGS:%O2=%O3}
+#KBUILD_CFLAGS := ${KBUILD_CFLAGS:%O2=%O3}
+#KBUILD_AFLAGS := ${KBUILD_AFLAGS:%O2=%O3}
 
 
 ifdef CONFIG_FUNCTION_TRACER
