--- a/kernel-uksm/arch/arm/configs/cyanogen_nypon_defconfig
+++ b/kernel-uksm/arch/arm/configs/cyanogen_nypon_defconfig
@@ -42,8 +42,8 @@ CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_LZO=y
 # CONFIG_KERNEL_GZIP is not set
-# CONFIG_KERNEL_LZMA is not set
-CONFIG_KERNEL_LZO=y
+CONFIG_KERNEL_LZMA=y
+# CONFIG_KERNEL_LZO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
@@ -102,8 +102,8 @@ CONFIG_INITRAMFS_SOURCE=""
 # CONFIG_RD_GZIP is not set
 # CONFIG_RD_BZIP2 is not set
 # CONFIG_RD_LZMA is not set
-# CONFIG_RD_XZ is not set
-CONFIG_RD_LZO=y
+CONFIG_RD_XZ=y
+# CONFIG_RD_LZO is not set
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
@@ -528,7 +528,7 @@ CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_GOV_LADDER=y
 CONFIG_CPU_IDLE_GOV_MENU=y
 CONFIG_DBX500_CPUIDLE=y
-CONFIG_DBX500_CPUIDLE_DEEPEST_STATE=3
+CONFIG_DBX500_CPUIDLE_DEEPEST_STATE=4
 # CONFIG_DBX500_CPUIDLE_APDEEPIDLE is not set
 CONFIG_DBX500_CPUIDLE_DEBUG=y
 
@@ -2904,7 +2904,7 @@ CONFIG_XZ_DEC_ARMTHUMB=y
 CONFIG_XZ_DEC_SPARC=y
 CONFIG_XZ_DEC_BCJ=y
 # CONFIG_XZ_DEC_TEST is not set
-CONFIG_DECOMPRESS_LZO=y
+CONFIG_DECOMPRESS_XZ=y
 CONFIG_REED_SOLOMON=y
 CONFIG_REED_SOLOMON_ENC8=y
 CONFIG_REED_SOLOMON_DEC8=y
